--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -971,6 +971,9 @@ img.course-tool__icon {
   .form-horizontal .control-label{ text-align:left; }
   textarea.form-control{ min-height:140px; }
 }
+.app-breadcrumb * { all: unset; @apply text-tiny font-semibold text-gray-90; }
+.app-breadcrumb .p-breadcrumb-separator { padding-inline: .25rem !important; }
+.app-breadcrumb a { cursor: pointer; text-decoration: none; }
 
 @import "~@fancyapps/fancybox/dist/jquery.fancybox.css";
 @import "~timepicker/jquery.timepicker.min.css";
